Primer commit Organic App

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,3 +1,7 @@
+$secondary: #eeeeee;
+.container-navbar{
+  background-color: rgba($secondary, 0.4);
+}
 .navbar-w-100 {
     z-index: 1500;
     padding: 0;
