--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2,5 +2,8 @@ $theme-colors: (
 "primary": #7eae00,
 "secondary": #eeeeee
 );
+
+@import "fonts/fonts";
 @import "~bootstrap/scss/bootstrap";
 @import "components/navbar";
+@import "components/sliderFullWidth";
