--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -7,3 +7,4 @@ $theme-colors: (
 @import "~bootstrap/scss/bootstrap";
 @import "components/navbar";
 @import "components/sliderFullWidth";
+@import "components/buttons/buttonPrincipal.scss";
