--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,94 +1,128 @@
 $secondary: #eeeeee;
-.container-navbar{
-  background-color: rgba($secondary, 0.4);
-}
-.navbar-w-100 {
-    z-index: 1500;
-    padding: 0;
-    .container {
-      .navbar-toggler {
-        display: block;
-      }
-    }
-  }
-  .navbar-collapse {
-    position: fixed;
-    z-index: 9;
-    display: block;
-    visibility: hidden;
-    opacity: 0;
-    z-index: -1;
-    top: 0;
-    left: 0;
+
+.container-navbar {
+  background-color: rgba($secondary, 0.7);
+  transition: 0.8s all ease;
+
+  & img {
     width: 100%;
-    height: 100%;
-    transition: all 0.4s;
-  
-    ul.navbar-nav {
-      position: absolute;
-      top: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      @media (max-width: 767.98px){
-        margin-top: -3rem;
-      }
-      @media (max-width: 575.98px){
-        margin-top: 0;
-      }
-  
-      li {
-        opacity: 0;
-        transition: opacity 0.4s cubic-bezier(0.58, 0.3, 0.005, 1);
+    transition: 0.8s all ease;
+    
+  }
+
+  &.active {
+    background-color: $secondary;
+
+    & img {
+      width: 75%;
+    }
+  }
+}
+
+.navbar-w-100 {
+  z-index: 1500;
+  padding: 0;
+
+  .container {
+    .navbar-toggler {
+      display: block;
+    }
+  }
+}
+
+.navbar-collapse {
+  position: fixed;
+  z-index: 9;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+
+  ul.navbar-nav {
+    position: absolute;
+    top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    @media (max-width: 767.98px) {
+      margin-top: -3rem;
+    }
+
+    @media (max-width: 575.98px) {
+      margin-top: 0;
+    }
+
+    li {
+      opacity: 0;
+      transition: opacity 0.4s cubic-bezier(0.58, 0.3, 0.005, 1);
+      padding: 0;
+      margin-bottom: 20px;
+
+      a {
+        font-size: 2.5rem;
         padding: 0;
-        margin-bottom: 20px;
-        a {
-          font-size: 2.5rem;
-          padding: 0;
-          @media (max-width: 767.98px){
-            font-size: 1.8rem;
-          }
-          @media (max-width: 575.98px){
-            font-size: 2rem;
-          }
+
+        @media (max-width: 767.98px) {
+          font-size: 1.8rem;
         }
-      }
-    }
-  
-    &.show {
-      min-height: 100vh;
-      visibility: visible;
-      opacity: 1;
-      z-index: 9;
-      ul {
-        li {
-          opacity: 1;
-          &:nth-child(1) {
-            transition-delay: 0.06s;
-          }
-          &:nth-child(2) {
-            transition-delay: 0.12s;
-          }
-          &:nth-child(3) {
-            transition-delay: 0.18s;
-          }
-          &:nth-child(4) {
-            transition-delay: 0.24s;
-          }
-          &:nth-child(5) {
-            transition-delay: 0.3s;
-          }
-          &:nth-child(6) {
-            transition-delay: 0.36s;
-          }
+
+        @media (max-width: 575.98px) {
+          font-size: 2rem;
         }
       }
     }
   }
-  .navbar-toggler{
-      z-index: 15;
+
+  &.show {
+    min-height: 100vh;
+    visibility: visible;
+    opacity: 1;
+    z-index: 9;
+
+    ul {
+      li {
+        opacity: 1;
+
+        &:nth-child(1) {
+          transition-delay: 0.06s;
+        }
+
+        &:nth-child(2) {
+          transition-delay: 0.12s;
+        }
+
+        &:nth-child(3) {
+          transition-delay: 0.18s;
+        }
+
+        &:nth-child(4) {
+          transition-delay: 0.24s;
+        }
+
+        &:nth-child(5) {
+          transition-delay: 0.3s;
+        }
+
+        &:nth-child(6) {
+          transition-delay: 0.36s;
+        }
+      }
+    }
   }
-  .menu_collapse{
-    height: 100vh;
-  }
+}
+
+.navbar-toggler,
+.icon-cart {
+  z-index: 15;
+}
+
+.menu_collapse {
+  height: 100vh;
+}
