--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -9,3 +9,4 @@ $theme-colors: ("primary": #7eae00,
 @import "components/buttons/buttonPrincipal.scss";
 @import "components/buttons/buttonCard.scss";
 @import "components/cards/cardCategory.scss";
+@import "components/counters/counterCard.scss"
