--- a/src/scss/components/products-layout/headerProduct.scss
+++ b/src/scss/components/products-layout/headerProduct.scss
@@ -1,6 +1,22 @@
-.mobile-bg {
-    background-image: ;
+.product{
+    max-height: 100vh;
+    overflow: hidden;
+    &-texts{
+        bottom: 150px;
+        left: 60px;
+        @media (min-width: 768px){
+            bottom: 360px;
+            left: 260px;
+        }
+        @media (min-width: 1450px) { 
+            bottom: 200px;
+         }
+        h1 {
+            font-size: 4rem;
+            @media (max-width: 575.98px) {
+                font-size: 2.8rem;
+            }
+        }
+    }
 }
-.desktop-bg{
-    background-image: ;
-}
+
