--- a/src/scss/components/products-layout/headerProduct.scss
+++ b/src/scss/components/products-layout/headerProduct.scss
@@ -4,17 +4,29 @@
     &-texts{
         bottom: 150px;
         left: 60px;
+        @media (max-width: 650px) {
+            bottom: 10px;
+            left: 50px;
+        }
         @media (min-width: 768px){
             bottom: 360px;
             left: 260px;
         }
+        @media (max-width: 1450px) { 
+            bottom: 250px;
+         }
         @media (min-width: 1450px) { 
             bottom: 200px;
          }
         h1 {
             font-size: 4rem;
-            @media (max-width: 575.98px) {
+            @media (max-width: 650px) {
                 font-size: 2.8rem;
+            }
+        }
+        h3 {
+            @media (max-width: 650px) {
+                font-size: 1.25rem;
             }
         }
     }
