--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -10,4 +10,5 @@ $theme-colors: ("primary": #7eae00,
 @import "components/buttons/buttonCard.scss";
 @import "components/cards/cardCategory.scss";
 @import "components/counters/counterCard.scss";
-@import "components/products-layout/headerProduct.scss"
+@import "components/products-layout/headerProduct.scss";
+@import "pages/cart.scss"
